# unsupervised-pcn

./: README.md  pyproject.toml  requirements.txt
hpc/: autoassociative_memory.sh  eval_PC.sh  run_exp.sh  train_AM.sh  train_PC.sh  train_PCModule.sh  train_PCModuleBis.sh  train_PCModule_auto.sh  train_PC_decay.sh  train_PC_extra.sh  train_PC_schedule.sh  train_frozen_PC.sh  train_iPC.sh  train_one_layer.sh  train_two_layers.sh  tune_first_layer.sh  tune_second_layer.sh
src/pcn/: compare_recall.py  compare_replay.py  datasets.py  eval_PC.py  eval_accuracy.py  eval_one_layer.py  eval_pattern_completion.py  eval_recall.py  eval_two_layers.py  first_layer_accuracy.py  layers.py  make_mnist.py  models.py  optim.py  plotting.py  run_exp.py  train_PC.py  train_PCModule.py  train_PCModuleBis.py  train_PCModule_auto.py  train_frozen_PC.py  train_frozen_model.py  train_iPC.py  train_model.py  train_one_layer.py  tune_second_layer.py  utils.py
