[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsupervised-pcn"
version = "0.1.0"
authors = [{name = "Lucie Fontaine", email = "fontaluc@gmail.com"}]
description = "Unsupervised PCN as a model of neocortex"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"